# TDSControl-octave

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: demo.m  octave_TDS.hpp  tds_create.cpp  tds_roots.cpp
